<resources>
    <string name="owner">Infarinato Coiffeur</string>
    <string name="app_name">Customer Administration</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search in</string>
    <string name="search_phrase">%1$s %2$s&#8230;</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
</resources>
